# sxm-player

./: .codeclimate.yml  .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  mypy.ini  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.bin/: format-code  lint-code  update-requirements
.bin/lib/: common.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
discord_siriusxm/: __init__.py  archiver.py  bot.py  cli.py  forked.py  models.py  player.py  processor.py  server.py  utils.py
discord_siriusxm/runners/: __init__.py  archiver.py  base.py  hls.py  processor.py  server.py
discord_siriusxm/runners/bot/: __init__.py  checks.py  converters.py  utils.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
mortis_music/: __init__.py  cli.py  command.py  handlers.py  models.py  player.py  queue.py  runner.py  signals.py  utils.py
mortis_music/players/: __init__.py  base.py  debug.py
mortis_music/runners/: __init__.py  archiver.py  base.py  hls.py  server.py
mortis_music/runners/bot/: __init__.py  base.py  commands.py  converters.py  models.py  player.py  plex.py  sxm.py  utils.py
mortis_music/workers/: __init__.py  archiver.py  base.py  debug.py  hls.py  server.py  status.py
reqs/: dev.in  requirements.in
sxm_player/: __init__.py  __main__.py  cli.py  command.py  handlers.py  models.py  queue.py  runner.py  signals.py  utils.py
sxm_player/debug/: __init__.py  player.py  worker.py
sxm_player/players/: __init__.py  base.py  cli.py  debug.py
sxm_player/workers/: __init__.py  archiver.py  base.py  cli.py  debug.py  hls.py  processor.py  server.py  status.py
tests/: test_discord_siriusxm.py
